--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/onehealth?useUnicode=true
-
-#spring.servlet.multipart.max-file-size=100MB
-#spring.servlet.multipart.max-request-size=200MB
-#hospital.upload.image.path=C:\\Users\\Albert\\IdeaProjects\\healthcare-management\\img\\
-#spring.devtools.livereload.enabled=true
+spring.devtools.livereload.enabled=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+hospital.upload.image.path=
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=200MB
-hospital.doctor.upload.image.path=C:\\Users\\Albert\\IdeaProjects\\OneHealth\\src\\main\\resources\\static\\docProfileImg
+
