--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=200MB
-hospital.upload.image.path=C:\\Users\\Albert\\IdeaProjects\\OneHealth\\img\\
+hospital.upload.image.path=C:\\Users\\Smart\\IdeaProjects\\OneHealth\\image\\
