--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,3 +12,4 @@ spring.mail.username=onehealthmedicalcenterobehealt@gmail.com
 spring.mail.password=hgceybjtjsmjiock
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.liquibase.change-log=classpath:/liquibase/changeLog.xml
