--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/onehealth?useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=MyP@ssw0rd2023!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=200MB
+hospital.upload.image.path=/home/arman/IdeaProjects/OneHealth/img/
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=onehealthmedicalcenterobehealt@gmail.com
+spring.mail.password=hgceybjtjsmjiock
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.liquibase.change-log=classpath:liquibase/changelog.xml
